NGINX status collection

--- a/projects-params.ipynb
+++ b/projects-params.ipynb
@@ -2,17 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1070.98s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n",
       "Requirement already satisfied: pip in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (23.3.1)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "1077.48s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n",
       "Requirement already satisfied: boto3 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (1.33.1)\n",
       "Requirement already satisfied: prettytable in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (3.9.0)\n",
       "Requirement already satisfied: botocore<1.34.0,>=1.33.1 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (from boto3) (1.33.1)\n",
@@ -33,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,13 +81,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getScalingDetails(cluster_name, service_name, region_name='us-east-1'):\n",
+    "def getScalingDetails(profile, region_name, cluster_name, service_name):\n",
     "    # Use the function with your profile to get a session\n",
-    "    aws_session = set_aws_credentials('acl-production', region_name=region_name)\n",
+    "    aws_session = set_aws_credentials(profile, region_name=region_name)\n",
     "\n",
     "    # Create ECS client using the session\n",
     "    ecs_client = aws_session.client('ecs')\n",
@@ -127,13 +125,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getLoadBalancingAlgorithm(cluster_name, service_name, region_name='us-east-1'):\n",
+    "def getLoadBalancingAlgorithm(profile, region_name, cluster_name, service_name):\n",
     "    # Use the function with your profile to get a session\n",
-    "    aws_session = set_aws_credentials('acl-production', region_name=region_name)\n",
+    "    aws_session = set_aws_credentials(profile, region_name=region_name)\n",
     "\n",
     "    # Create ECS and ELBv2 clients using the session\n",
     "    ecs_client = aws_session.client('ecs')\n",
@@ -164,29 +162,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Region us-east-1 - Min Tasks: 8, Max Tasks: 64, Actual Tasks: 33 (44.64%), Algorithm: round_robin\n",
-      "Region eu-central-1 - Min Tasks: 8, Max Tasks: 64, Actual Tasks: 64 (100.0%), Algorithm: round_robin\n",
-      "Region af-south-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: round_robin\n",
-      "Region ca-central-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: round_robin\n",
-      "Region ap-northeast-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: round_robin\n",
-      "Region ap-southeast-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: round_robin\n",
-      "+----------------+-----------+-----------+--------------+-----------------+-------------+\n",
-      "|     Region     | Min Tasks | Max Tasks | Actual Tasks | Utilization (%) |  Algorithm  |\n",
-      "+----------------+-----------+-----------+--------------+-----------------+-------------+\n",
-      "|   us-east-1    |     8     |     64    |      33      |      44.64      | round_robin |\n",
-      "|  eu-central-1  |     8     |     64    |      64      |      100.0      | round_robin |\n",
-      "|   af-south-1   |     4     |     4     |      4       |       100       | round_robin |\n",
-      "|  ca-central-1  |     4     |     4     |      4       |       100       | round_robin |\n",
-      "| ap-northeast-1 |     4     |     4     |      4       |       100       | round_robin |\n",
-      "| ap-southeast-1 |     4     |     4     |      4       |       100       | round_robin |\n",
-      "+----------------+-----------+-----------+--------------+-----------------+-------------+\n"
+      "acl-staging us-west-2 - Min Tasks: 1, Max Tasks: 4, Actual Tasks: 4 (100.0%), Algorithm: least_outstanding_requests\n",
+      "acl-staging us-east-1 - Min Tasks: 3, Max Tasks: 3, Actual Tasks: 3 (100%), Algorithm: round_robin\n",
+      "acl-production us-east-1 - Min Tasks: 8, Max Tasks: 64, Actual Tasks: 28 (35.71%), Algorithm: round_robin\n",
+      "acl-production eu-central-1 - Min Tasks: 8, Max Tasks: 64, Actual Tasks: 58 (89.29%), Algorithm: round_robin\n",
+      "acl-production af-south-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: round_robin\n",
+      "acl-production ca-central-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: round_robin\n",
+      "acl-production ap-northeast-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: round_robin\n",
+      "acl-production ap-southeast-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: round_robin\n",
+      "+----------------+----------------+-----------+-----------+--------------+-----------------+----------------------------+\n",
+      "|    Profile     |     Region     | Min Tasks | Max Tasks | Actual Tasks | Utilization (%) |         Algorithm          |\n",
+      "+----------------+----------------+-----------+-----------+--------------+-----------------+----------------------------+\n",
+      "|  acl-staging   |   us-west-2    |     1     |     4     |      4       |      100.0      | least_outstanding_requests |\n",
+      "|  acl-staging   |   us-east-1    |     3     |     3     |      3       |       100       |        round_robin         |\n",
+      "| acl-production |   us-east-1    |     8     |     64    |      28      |      35.71      |        round_robin         |\n",
+      "| acl-production |  eu-central-1  |     8     |     64    |      58      |      89.29      |        round_robin         |\n",
+      "| acl-production |   af-south-1   |     4     |     4     |      4       |       100       |        round_robin         |\n",
+      "| acl-production |  ca-central-1  |     4     |     4     |      4       |       100       |        round_robin         |\n",
+      "| acl-production | ap-northeast-1 |     4     |     4     |      4       |       100       |        round_robin         |\n",
+      "| acl-production | ap-southeast-1 |     4     |     4     |      4       |       100       |        round_robin         |\n",
+      "+----------------+----------------+-----------+-----------+--------------+-----------------+----------------------------+\n"
      ]
     }
    ],
@@ -195,24 +197,26 @@
     "cluster_name = 'EcsCluster1-main'\n",
     "service_name = 'projects-application-fargate-main'\n",
     "\n",
+    "environments = [\n",
+    "    ('acl-staging', 'us-west-2'),  # staging\n",
+    "    ('acl-staging', 'us-east-1'),  # preprod?\n",
+    "    ('acl-production', 'us-east-1'),\n",
+    "    ('acl-production', 'eu-central-1'), \n",
+    "    ('acl-production', 'af-south-1'),\n",
+    "    ('acl-production', 'ca-central-1'),\n",
+    "    ('acl-production', 'ap-northeast-1'),\n",
+    "    ('acl-production', 'ap-southeast-1'),\n",
+    "]\n",
     "\n",
     "table = PrettyTable()\n",
-    "table.field_names = [\"Region\", \"Min Tasks\", \"Max Tasks\", \"Actual Tasks\", \"Utilization (%)\", \"Algorithm\"]\n",
+    "table.field_names = [\"Profile\", \"Region\", \"Min Tasks\", \"Max Tasks\", \"Actual Tasks\", \"Utilization (%)\", \"Algorithm\"]\n",
     "\n",
-    "regions = ['us-east-1',\n",
-    "           'eu-central-1', \n",
-    "           'af-south-1',\n",
-    "           'ca-central-1',\n",
-    "           'ap-northeast-1',\n",
-    "           'ap-southeast-1',\n",
-    "           ]\n",
-    "\n",
-    "for region in regions:\n",
-    "    min_tasks, max_tasks, desired_tasks = getScalingDetails(cluster_name, service_name, region_name=region)\n",
-    "    algorithm = getLoadBalancingAlgorithm(cluster_name, service_name, region_name=region)\n",
+    "for profile, region in environments:\n",
+    "    min_tasks, max_tasks, desired_tasks = getScalingDetails(profile, region, cluster_name, service_name)\n",
+    "    algorithm = getLoadBalancingAlgorithm(profile, region, cluster_name, service_name)\n",
     "    percentage = round((desired_tasks-min_tasks)/(max_tasks-min_tasks)*100.,2) if max_tasks > min_tasks else 100\n",
-    "    print(f\"Region {region} - Min Tasks: {min_tasks}, Max Tasks: {max_tasks}, Actual Tasks: {desired_tasks} ({percentage}%), Algorithm: {algorithm}\")\n",
-    "    table.add_row([region, min_tasks, max_tasks, desired_tasks, percentage, algorithm])\n",
+    "    print(f\"{profile} {region} - Min Tasks: {min_tasks}, Max Tasks: {max_tasks}, Actual Tasks: {desired_tasks} ({percentage}%), Algorithm: {algorithm}\")\n",
+    "    table.add_row([profile, region, min_tasks, max_tasks, desired_tasks, percentage, algorithm])\n",
     "\n",
     "print(table)"
    ]
