task definition params (cpu, memory, workers)

--- a/collect-nginx-statuses.ipynb
+++ b/collect-nginx-statuses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,30 +51,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 2 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
-      "Task arn:aws:ecs:us-west-2:649973207834:task/EcsCluster1-main/b0a8fc34a5fd416ca6fe06896bcadccf - {'active': 3, 'accepts': 418, 'handled': 418, 'requests': 556, 'reading': 0, 'writing': 1, 'waiting': 2}\n",
-      "Task arn:aws:ecs:us-west-2:649973207834:task/EcsCluster1-main/f34bb88a1c00473c97ce1f9723afa23f - {'active': 1, 'accepts': 399, 'handled': 399, 'requests': 551, 'reading': 0, 'writing': 1, 'waiting': 0}\n",
-      "Found 3 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
-      "Task arn:aws:ecs:us-east-1:649973207834:task/EcsCluster1-main/423ab22edf2347d5bf2596769d766ca6 - {'active': 1, 'accepts': 14698, 'handled': 14698, 'requests': 113490, 'reading': 0, 'writing': 1, 'waiting': 0}\n",
-      "Task arn:aws:ecs:us-east-1:649973207834:task/EcsCluster1-main/d74022fab77f4fee9b1a63b83adbf8fc - {'active': 2, 'accepts': 14763, 'handled': 14763, 'requests': 113494, 'reading': 0, 'writing': 1, 'waiting': 1}\n",
-      "Task arn:aws:ecs:us-east-1:649973207834:task/EcsCluster1-main/fe613cdcb4114e17905849ce57d24344 - {'active': 1, 'accepts': 14723, 'handled': 14723, 'requests': 113489, 'reading': 0, 'writing': 1, 'waiting': 0}\n",
-      "+-------------+-----------+--------+---------+---------+----------+---------+---------+---------+\n",
-      "|   Profile   |   Region  | active | handled | accepts | requests | reading | writing | waiting |\n",
-      "+-------------+-----------+--------+---------+---------+----------+---------+---------+---------+\n",
-      "| acl-staging | us-west-2 |   4    |   817   |   817   |   1107   |    0    |    2    |    2    |\n",
-      "| acl-staging | us-east-1 |   4    |  44184  |  44184  |  340473  |    0    |    3    |    1    |\n",
-      "+-------------+-----------+--------+---------+---------+----------+---------+---------+---------+\n"
-     ]
-    }
-   ],
+   "source": [
+    "## AWS utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def set_aws_credentials(profile, region_name='us-east-1'):\n",
     "    result = subprocess.run(\n",
@@ -92,7 +79,7 @@
     "    return session\n",
     "\n",
     "\n",
-    "def list_tasks(ecs_client, cluster_name, service_name):\n",
+    "def get_tasks(ecs_client, cluster_name, service_name):\n",
     "    # List all running tasks in a specified service\n",
     "    response = ecs_client.list_tasks(\n",
     "        cluster=cluster_name,\n",
@@ -102,6 +89,72 @@
     "    return response['taskArns']\n",
     "\n",
     "\n",
+    "def get_task_definition(ecs_client, cluster_name, task_arns):\n",
+    "    tasks = ecs_client.describe_tasks(cluster=cluster_name, tasks=task_arns)['tasks']\n",
+    "\n",
+    "    if len(tasks) == 0:\n",
+    "        raise Exception(\"No tasks found\")\n",
+    "    \n",
+    "    task_definition_arn = tasks[0]['taskDefinitionArn']\n",
+    "\n",
+    "    response = ecs_client.describe_task_definition(taskDefinition=task_definition_arn)\n",
+    "    task_definition = response['taskDefinition']\n",
+    "    return task_definition\n",
+    "\n",
+    "\n",
+    "def get_container_definition(task_definition, container_name):\n",
+    "    for container_definition in task_definition['containerDefinitions']:\n",
+    "        if container_definition['name'] == container_name:\n",
+    "            return container_definition\n",
+    "    return None\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get nginx_status from nginx stub_status module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 3 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
+      "Found 3 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
+      "Found 32 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
+      "Found 61 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
+      "Found 4 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
+      "Found 4 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
+      "Found 4 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
+      "Found 4 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
+      "Task arn:aws:ecs:ap-southeast-1:707785685172:task/EcsCluster1-main/a7905734c2214ceba40a5e72ed20226e failed: EOF occurred in violation of protocol (_ssl.c:1002)\n",
+      "Found 6 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
+      "Found 4 tasks running in EcsCluster1-main/projects-application-fargate-main\n",
+      "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-------------+\n",
+      "|    Profile     |     Region     | tasks | active | handled | accepts | requests | reading | writing | waiting | waiting_max |\n",
+      "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-------------+\n",
+      "|  acl-staging   |   us-west-2    |   3   |   10   |   3327  |   3327  |   7099   |    0    |    3    |    7    |      3      |\n",
+      "|  acl-staging   |   us-east-1    |   3   |   5    |  12549  |  12549  |  19545   |    0    |    3    |    2    |      1      |\n",
+      "| acl-production |   us-east-1    |   32  |   80   |  715371 |  715371 | 1070454  |    0    |    39   |    41   |      3      |\n",
+      "| acl-production |  eu-central-1  |   61  |  228   | 1691376 | 1691376 | 1999872  |    0    |    72   |   156   |      5      |\n",
+      "| acl-production |   af-south-1   |   4   |   13   |  243410 |  243410 |  330441  |    0    |    5    |    8    |      2      |\n",
+      "| acl-production |  ca-central-1  |   4   |   6    |  251017 |  251017 |  490774  |    0    |    4    |    2    |      1      |\n",
+      "| acl-production | ap-northeast-1 |   4   |   4    |  210074 |  210074 |  313101  |    0    |    4    |    0    |      0      |\n",
+      "| acl-production | ap-southeast-1 |   4   |   13   |  395447 |  395447 | 1008361  |    0    |    4    |    9    |      4      |\n",
+      "| acl-production | ap-southeast-2 |   6   |   10   |  398986 |  398986 |  495651  |    0    |    6    |    4    |      1      |\n",
+      "| acl-production |   sa-east-1    |   4   |   55   |  359637 |  359637 |  632518  |    0    |    4    |    51   |      14     |\n",
+      "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-------------+\n"
+     ]
+    }
+   ],
+   "source": [
     "def session_reader(session: dict) -> str:\n",
     "    AgentMessageHeader = c.Struct(\n",
     "        \"HeaderLength\" / c.Int32ub,\n",
@@ -173,20 +226,22 @@
     "    }\n",
     "\n",
     "\n",
-    "def get_nginx_status(profile, region_name, cluster_name, service_name, container_name='nginx'):\n",
+    "def get_nginx_status(profile, region_name, cluster_name, service_name):\n",
     "    aws_session = set_aws_credentials(profile, region_name=region_name)\n",
     "\n",
     "    # Create ECS client using the session\n",
     "    ecs_client = aws_session.client('ecs')\n",
     "\n",
     "    # List all running tasks in a specified service\n",
-    "    task_arns = list_tasks(ecs_client, cluster_name, service_name)\n",
+    "    task_arns = get_tasks(ecs_client, cluster_name, service_name)\n",
     "\n",
-    "    print(\n",
-    "        f\"Found {len(task_arns)} tasks running in {cluster_name}/{service_name}\")\n",
+    "    print(f\"Found {len(task_arns)} tasks running in {profile}/{region_name}\")\n",
+    "\n",
+    "    container_name = 'nginx'\n",
     "\n",
     "    # Initialize a defaultdict for summing up the values\n",
     "    aggregated_stats = defaultdict(int)\n",
+    "    aggregated_stats['instance_count'] = len(task_arns)\n",
     "\n",
     "    '''\n",
     "    for task_arn in task_arns:\n",
@@ -210,10 +265,11 @@
     "            try:\n",
     "                response = future.result()\n",
     "                stats = parse_curl_output(response)\n",
-    "                print(f\"Task {task_arn} - {stats}\")\n",
+    "                #print(f\"Task {task_arn} - {stats}\")\n",
     "                # Sum up the values\n",
     "                for key, value in stats.items():\n",
     "                    aggregated_stats[key] += value\n",
+    "                    aggregated_stats[f'{key}_max'] = max(aggregated_stats[f'{key}_max'], value)\n",
     "            except Exception as e:\n",
     "                print(f\"Task {task_arn} failed: {e}\")\n",
     "\n",
@@ -227,46 +283,35 @@
     "environments = [\n",
     "    ('acl-staging', 'us-west-2'),  # staging\n",
     "    ('acl-staging', 'us-east-1'),  # preprod?\n",
-    "    # ('acl-production', 'us-east-1'),\n",
-    "    # ('acl-production', 'eu-central-1'),\n",
-    "    # ('acl-production', 'af-south-1'),\n",
-    "    # ('acl-production', 'ca-central-1'),\n",
-    "    # ('acl-production', 'ap-northeast-1'),\n",
-    "    # ('acl-production', 'ap-southeast-1'),\n",
+    "    ('acl-production', 'us-east-1'),\n",
+    "    ('acl-production', 'eu-central-1'),\n",
+    "    ('acl-production', 'af-south-1'),\n",
+    "    ('acl-production', 'ca-central-1'),\n",
+    "    ('acl-production', 'ap-northeast-1'),\n",
+    "    ('acl-production', 'ap-southeast-1'),\n",
+    "    ('acl-production', 'ap-southeast-2'),\n",
+    "    ('acl-production', 'sa-east-1'),\n",
     "]\n",
     "\n",
     "table = PrettyTable()\n",
-    "table.field_names = [\"Profile\", \"Region\", \"active\", \"handled\",\n",
-    "                     \"accepts\", \"requests\", \"reading\", \"writing\", \"waiting\"]\n",
+    "table.field_names = [\"Profile\", \"Region\", \"tasks\", \"active\", \"handled\",\n",
+    "                     \"accepts\", \"requests\", \"reading\", \"writing\", \"waiting\", \"waiting_max\"]\n",
     "\n",
     "for profile, region in environments:\n",
-    "    aggregated_stats = get_nginx_status(\n",
-    "        profile, region, cluster_name, service_name)\n",
+    "    aggregated_stats = get_nginx_status(profile, region, cluster_name, service_name)\n",
     "    table.add_row([profile, region,\n",
+    "                   aggregated_stats['instance_count'],\n",
     "                   aggregated_stats['active'],\n",
     "                   aggregated_stats['handled'],\n",
     "                   aggregated_stats['accepts'],\n",
     "                   aggregated_stats['requests'],\n",
     "                   aggregated_stats['reading'],\n",
     "                   aggregated_stats['writing'],\n",
-    "                   aggregated_stats['waiting']])\n",
+    "                   aggregated_stats['waiting'], aggregated_stats['waiting_max']\n",
+    "                   ])\n",
     "\n",
     "print(table)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "attach to task:\n",
-    "\n",
-    "`aws ecs execute-command --cluster EcsCluster1-main --task 0bc3316b21414e6490f4a9707e11ec52 --command \"/bin/bash\" --interactive --container nginx`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -286,6 +331,117 @@
     "\n",
     "`Waiting` - The current number of idle client connections waiting for a request."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Print task parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1 tasks running in acl-playground/us-west-2\n",
+      "Found 3 tasks running in acl-staging/us-west-2\n",
+      "Found 3 tasks running in acl-staging/us-east-1\n",
+      "Found 32 tasks running in acl-production/us-east-1\n",
+      "Found 61 tasks running in acl-production/eu-central-1\n",
+      "Found 4 tasks running in acl-production/af-south-1\n",
+      "Found 4 tasks running in acl-production/ca-central-1\n",
+      "Found 4 tasks running in acl-production/ap-northeast-1\n",
+      "Found 4 tasks running in acl-production/ap-southeast-1\n",
+      "Found 6 tasks running in acl-production/ap-southeast-2\n",
+      "Found 4 tasks running in acl-production/sa-east-1\n",
+      "+----------------+----------------+------+--------+-----------------+\n",
+      "|    Profile     |     Region     | vCPU | Memory | Unicorn Workers |\n",
+      "+----------------+----------------+------+--------+-----------------+\n",
+      "| acl-playground |   us-west-2    | 0.5  |  3 GB  |        4        |\n",
+      "|  acl-staging   |   us-west-2    | 0.5  |  3 GB  |        2        |\n",
+      "|  acl-staging   |   us-east-1    | 1.0  |  5 GB  |        2        |\n",
+      "| acl-production |   us-east-1    | 1.0  |  6 GB  |        2        |\n",
+      "| acl-production |  eu-central-1  | 2.0  |  9 GB  |        2        |\n",
+      "| acl-production |   af-south-1   | 0.5  |  4 GB  |        2        |\n",
+      "| acl-production |  ca-central-1  | 0.5  |  4 GB  |        2        |\n",
+      "| acl-production | ap-northeast-1 | 0.5  |  4 GB  |        2        |\n",
+      "| acl-production | ap-southeast-1 | 0.5  |  4 GB  |        2        |\n",
+      "| acl-production | ap-southeast-2 | 1.0  |  6 GB  |        2        |\n",
+      "| acl-production |   sa-east-1    | 0.5  |  4 GB  |        2        |\n",
+      "+----------------+----------------+------+--------+-----------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_service_params(profile, region_name, cluster_name, service_name):\n",
+    "    aws_session = set_aws_credentials(profile, region_name=region_name)\n",
+    "\n",
+    "    # Create ECS client using the session\n",
+    "    ecs_client = aws_session.client('ecs')\n",
+    "\n",
+    "    # List all running tasks in a specified service\n",
+    "    task_arns = get_tasks(ecs_client, cluster_name, service_name)\n",
+    "\n",
+    "    print(f\"Found {len(task_arns)} tasks running in {profile}/{region_name}\")\n",
+    "\n",
+    "    task_definition = get_task_definition(ecs_client, cluster_name, task_arns)\n",
+    "\n",
+    "    container_definition = get_container_definition(task_definition, container_name='application')\n",
+    "\n",
+    "    environment_variables = container_definition.get('environment', [])\n",
+    "\n",
+    "\n",
+    "    vcpu = round(float(task_definition['cpu']) / 1024, 1)\n",
+    "    memory = int(task_definition['memory']) // 1024\n",
+    "    unicorn_workers = next((env_var['value'] for env_var in environment_variables if env_var['name'] == 'UNICORN_WORKERS'), None)\n",
+    "    \n",
+    "    return vcpu, memory, unicorn_workers\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "\n",
+    "# Specify your cluster and service name\n",
+    "cluster_name = 'EcsCluster1-main'\n",
+    "service_name = 'projects-application-fargate-main'\n",
+    "\n",
+    "environments = [\n",
+    "    ('acl-playground', 'us-west-2'),  # playground\n",
+    "    ('acl-staging', 'us-west-2'),  # staging\n",
+    "    ('acl-staging', 'us-east-1'),  # preprod?\n",
+    "    ('acl-production', 'us-east-1'),\n",
+    "    ('acl-production', 'eu-central-1'),\n",
+    "    ('acl-production', 'af-south-1'),\n",
+    "    ('acl-production', 'ca-central-1'),\n",
+    "    ('acl-production', 'ap-northeast-1'),\n",
+    "    ('acl-production', 'ap-southeast-1'),\n",
+    "    ('acl-production', 'ap-southeast-2'),\n",
+    "    ('acl-production', 'sa-east-1'),\n",
+    "]\n",
+    "\n",
+    "\n",
+    "table = PrettyTable()\n",
+    "table.field_names = [\"Profile\", \"Region\", \"vCPU\", \"Memory\", \"Unicorn Workers\"]\n",
+    "\n",
+    "\n",
+    "for profile, region in environments:\n",
+    "    vcpu, memory, unicorn_workers = get_service_params(profile, region, cluster_name, service_name)\n",
+    "    table.add_row([profile, region, vcpu, f\"{memory} GB\", unicorn_workers])\n",
+    "\n",
+    "print(table)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
