--- a/projects-params.ipynb
+++ b/projects-params.ipynb
@@ -169,26 +169,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "acl-staging us-west-2 - Min Tasks: 1, Max Tasks: 4, Actual Tasks: 4 (100.0%), Algorithm: least_outstanding_requests\n",
-      "acl-staging us-east-1 - Min Tasks: 3, Max Tasks: 3, Actual Tasks: 3 (100%), Algorithm: round_robin\n",
-      "acl-production us-east-1 - Min Tasks: 8, Max Tasks: 64, Actual Tasks: 28 (35.71%), Algorithm: round_robin\n",
-      "acl-production eu-central-1 - Min Tasks: 8, Max Tasks: 64, Actual Tasks: 58 (89.29%), Algorithm: round_robin\n",
-      "acl-production af-south-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: round_robin\n",
-      "acl-production ca-central-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: round_robin\n",
-      "acl-production ap-northeast-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: round_robin\n",
-      "acl-production ap-southeast-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: round_robin\n",
-      "+----------------+----------------+-----------+-----------+--------------+-----------------+----------------------------+\n",
-      "|    Profile     |     Region     | Min Tasks | Max Tasks | Actual Tasks | Utilization (%) |         Algorithm          |\n",
-      "+----------------+----------------+-----------+-----------+--------------+-----------------+----------------------------+\n",
-      "|  acl-staging   |   us-west-2    |     1     |     4     |      4       |      100.0      | least_outstanding_requests |\n",
-      "|  acl-staging   |   us-east-1    |     3     |     3     |      3       |       100       |        round_robin         |\n",
-      "| acl-production |   us-east-1    |     8     |     64    |      28      |      35.71      |        round_robin         |\n",
-      "| acl-production |  eu-central-1  |     8     |     64    |      58      |      89.29      |        round_robin         |\n",
-      "| acl-production |   af-south-1   |     4     |     4     |      4       |       100       |        round_robin         |\n",
-      "| acl-production |  ca-central-1  |     4     |     4     |      4       |       100       |        round_robin         |\n",
-      "| acl-production | ap-northeast-1 |     4     |     4     |      4       |       100       |        round_robin         |\n",
-      "| acl-production | ap-southeast-1 |     4     |     4     |      4       |       100       |        round_robin         |\n",
-      "+----------------+----------------+-----------+-----------+--------------+-----------------+----------------------------+\n"
+      "acl-playground us-west-2 - Min Tasks: 1, Max Tasks: 4, Actual Tasks: 1 (0.0%), Algorithm: least_outstanding_requests\n",
+      "acl-staging us-west-2 - Min Tasks: 1, Max Tasks: 4, Actual Tasks: 3 (66.67%), Algorithm: least_outstanding_requests\n",
+      "acl-staging us-east-1 - Min Tasks: 3, Max Tasks: 3, Actual Tasks: 3 (100%), Algorithm: least_outstanding_requests\n",
+      "acl-production us-east-1 - Min Tasks: 8, Max Tasks: 64, Actual Tasks: 32 (42.86%), Algorithm: least_outstanding_requests\n",
+      "acl-production eu-central-1 - Min Tasks: 8, Max Tasks: 64, Actual Tasks: 61 (94.64%), Algorithm: least_outstanding_requests\n",
+      "acl-production af-south-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: least_outstanding_requests\n",
+      "acl-production ca-central-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: least_outstanding_requests\n",
+      "acl-production ap-northeast-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: least_outstanding_requests\n",
+      "acl-production ap-southeast-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: least_outstanding_requests\n",
+      "acl-production ap-southeast-2 - Min Tasks: 6, Max Tasks: 6, Actual Tasks: 6 (100%), Algorithm: least_outstanding_requests\n",
+      "acl-production sa-east-1 - Min Tasks: 4, Max Tasks: 4, Actual Tasks: 4 (100%), Algorithm: least_outstanding_requests\n",
+      "+----------------+----------------+-----+-----+--------+-------+----------------------------+\n",
+      "|    Profile     |     Region     | Min | Max | Actual |   %   |         Algorithm          |\n",
+      "+----------------+----------------+-----+-----+--------+-------+----------------------------+\n",
+      "| acl-playground |   us-west-2    |  1  |  4  |   1    |  0.0  | least_outstanding_requests |\n",
+      "|  acl-staging   |   us-west-2    |  1  |  4  |   3    | 66.67 | least_outstanding_requests |\n",
+      "|  acl-staging   |   us-east-1    |  3  |  3  |   3    |  100  | least_outstanding_requests |\n",
+      "| acl-production |   us-east-1    |  8  |  64 |   32   | 42.86 | least_outstanding_requests |\n",
+      "| acl-production |  eu-central-1  |  8  |  64 |   61   | 94.64 | least_outstanding_requests |\n",
+      "| acl-production |   af-south-1   |  4  |  4  |   4    |  100  | least_outstanding_requests |\n",
+      "| acl-production |  ca-central-1  |  4  |  4  |   4    |  100  | least_outstanding_requests |\n",
+      "| acl-production | ap-northeast-1 |  4  |  4  |   4    |  100  | least_outstanding_requests |\n",
+      "| acl-production | ap-southeast-1 |  4  |  4  |   4    |  100  | least_outstanding_requests |\n",
+      "| acl-production | ap-southeast-2 |  6  |  6  |   6    |  100  | least_outstanding_requests |\n",
+      "| acl-production |   sa-east-1    |  4  |  4  |   4    |  100  | least_outstanding_requests |\n",
+      "+----------------+----------------+-----+-----+--------+-------+----------------------------+\n"
      ]
     }
    ],
@@ -198,18 +204,21 @@
     "service_name = 'projects-application-fargate-main'\n",
     "\n",
     "environments = [\n",
+    "    ('acl-playground', 'us-west-2'),  # playground\n",
     "    ('acl-staging', 'us-west-2'),  # staging\n",
     "    ('acl-staging', 'us-east-1'),  # preprod?\n",
     "    ('acl-production', 'us-east-1'),\n",
-    "    ('acl-production', 'eu-central-1'), \n",
+    "    ('acl-production', 'eu-central-1'),\n",
     "    ('acl-production', 'af-south-1'),\n",
     "    ('acl-production', 'ca-central-1'),\n",
     "    ('acl-production', 'ap-northeast-1'),\n",
     "    ('acl-production', 'ap-southeast-1'),\n",
+    "    ('acl-production', 'ap-southeast-2'),\n",
+    "    ('acl-production', 'sa-east-1'),\n",
     "]\n",
     "\n",
     "table = PrettyTable()\n",
-    "table.field_names = [\"Profile\", \"Region\", \"Min Tasks\", \"Max Tasks\", \"Actual Tasks\", \"Utilization (%)\", \"Algorithm\"]\n",
+    "table.field_names = [\"Profile\", \"Region\", \"Min\", \"Max\", \"Actual\", \"%\", \"Algorithm\"]\n",
     "\n",
     "for profile, region in environments:\n",
     "    min_tasks, max_tasks, desired_tasks = getScalingDetails(profile, region, cluster_name, service_name)\n",
